@@ -68,6 +68,7 @@ Andreas Doehler - Patches
 Christoph Anton Mitterer - Patches and feedback
 Rene Koch - Patches
 Craig Barraclough - Patches
+Martin Schirmacher - Patches
 
 ###########################################
 #           NPCD Thanks                   #
