@@ -1,4 +1,5 @@
 **pnp-0.6.21 ??/??/2013**
+  * Feature: Helper functions rrd::alerter and rrd:alerter_gr both supports treshold detection (Martin Schirrmacher)
 
 **pnp-0.6.20 03/03/2013**
   * Feature: Support check_mk Multisite Cookie Auth ( Lars Michelsen )
